# NovaGenAI

./: .gitignore  3d-hero.js  404.html  AEO_DEEP_STRATEGY.md  AEO_OPTIMIZATION_REPORT.md  AI_DIRECTORY_MASTERLIST.md  BACKLINK_PLAN.md  CNAME  COMPETITIVE_BACKLINK_INTEL.md  CORP_PRESENCE_PROFILES.md  CRAWL_SUBMISSION_LOG.md  DESIGN_AUDIT.md  DESIGN_INSPIRATION.md  DIRECTORY_SUBMISSIONS.md  IMAGE_AUDIT.md  IMAGE_OPTIMIZATION_COMPLETE.md  IMAGE_OPTIMIZATION_REPORT.md  INDEXING_FIX_REPORT.md  INTERNAL_LINKS_REPORT.md  NovaGenAI_Technical_Audit_Prompt.md  PERFORMANCE_REPORT.md  PR_DISTRIBUTION_PITCHBOOK.md  README.md  README_DIRECTORIES.md  SCHEMA_AUDIT_SUMMARY.md  SCHEMA_REPORT.md  SEO-FIX-REPORT-2.md  SEO-FIX-REPORT.md  SEO-QC-REPORT.md  SEO_AUDIT_REPORT.md  SEO_AUDIT_SUMMARY.txt  SEO_FIXES_ACTIONABLE.md  SEO_FIXES_COMPLETED.md  SEO_FIXES_SUMMARY.txt  SUBMISSION_TEMPLATES.md  SUBMISSION_TRACKER.md  WEB_PRESENCE_STRATEGY.md  _aeo-footer.html  about.html  about.html.backup  (+58 more)
.well-known/: ai-plugin.json  security.txt
blog/: _template.html  _video-card.html  ai-document-intelligence.html  ai-drug-discovery.html  blog.css  blog.js  building-custom-llms.html  cell2sentence-computational-biotech.html  cloud-vs-onpremise-vs-hybrid.html  dgx-spark-complete-guide.html  in-silico-modelling.html  index.html  novagenai-vision-2026.html  nvidia-ai-stack-explained.html  schema-blog-template.json  single-omics-vs-multi-omics.html  voice-ai-enterprise.html  what-is-cell2sentence.html  (+3 more)
libraries/novagenai_guardrails/: README.md  __init__.py  code_switcher.py  data_sovereignty.py  setup.cfg
(+13 files in other folders)
