[metadata]
name = novagenai-guardrails
version = 0.2.0
description = Malaysia-focused PII DLP pre-filter and Manglish code-switch detection for LLM/voice pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
author = NovaGenAI Sdn. Bhd.
license = Proprietary

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
include =
    novagenai_guardrails*

[options.extras_require]
phone =
    phonenumbers>=8.13
cjk =
    jieba>=0.42
full =
    phonenumbers>=8.13
    jieba>=0.42
dev =
    pytest>=8
    phonenumbers>=8.13
    jieba>=0.42
